tests/parser/syntax-errors/token-not-found/expected_colon_func_def.choc
# RUN: choco-opt "%s" | filecheck "%s" --strict-whitespace

def foo()
    pass

# CHECK:      SyntaxError (line 3, column 10): token of kind TokenKind.COLON not found.
# CHECK-NEXT: >>>def foo()
# CHECK-NEXT: >>>---------^
